Added stylesheet to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
 		<meta charset='utf-8'>
 		<title>rdiomix</title>
 
+		<link rel='stylesheet' type='text/css' href='app.css'>
+
 		<!--[if lte IE 8]>
 			<script src='//cdnjs.cloudflare.com/ajax/libs/json3/3.2.4/json3.js'></script>
 			<script src='//cdnjs.cloudflare.com/ajax/libs/es5-shim/2.1.0/es5-sham.js'></script>
