--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,9 @@
 	</head>
 	<body>
 	
-
-	
-
-	<script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js'></script>
-	<script src='app.js'></script>
+		<div ng-view></div>
+		
+		<script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js'></script>
+		<script src='app.js'></script>
 	</body>
 </html>
